# SDLC-assesment

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  SECURITY.md  VALIDATION_AUDIT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  RENAME_CHECKLIST.md
scripts/: check_schema_sync.py
sdlc_assessor/: __init__.py  cli.py
sdlc_assessor/classifier/: engine.py
sdlc_assessor/collector/: engine.py
sdlc_assessor/compare/: __init__.py  engine.py  markdown.py
sdlc_assessor/core/: __init__.py  schema.py
sdlc_assessor/detectors/: common.py  python_pack.py  registry.py  tsjs_pack.py
sdlc_assessor/detectors/sast/: __init__.py  bandit_adapter.py  eslint_adapter.py  framework.py  ruff_adapter.py  semgrep_adapter.py
sdlc_assessor/detectors/treesitter/: framework.py
sdlc_assessor/normalizer/: dedupe.py  findings.py
sdlc_assessor/profiles/: loader.py
sdlc_assessor/profiles/data/: repo_type_profiles.json
sdlc_assessor/remediation/: planner.py
sdlc_assessor/renderer/: deliverable_html.py  markdown.py
sdlc_assessor/renderer/deliverables/: __init__.py  base.py  (+5 more)
sdlc_assessor/scorer/: blockers.py  engine.py
tests/: conftest.py
tests/golden/: test_report_render.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_classifier.py  test_cli.py  test_collector_evidence.py  test_compare.py  test_core_schema.py  test_dedupe.py  test_deliverable_depth.py  test_detectors.py  test_profile_packs.py  test_profiles_loader.py  test_sast.py  test_schema_conformance.py  test_scorer_blockers.py
(+4 files in other folders)
