[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-assessor"
version = "0.1.0"
description = "CLI-first SDLC repository assessment framework"
requires-python = ">=3.10"

[project.scripts]
sdlc = "sdlc_assessor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
